<resources>
    <string name="app_name">DotaCDTracker</string>
    <string name="choose_hero">Choose hero</string>
    <string name="add_your_heroes">Add your heroes</string>
    <string name="cont">Continue</string>
    <string name="add_str">Add str</string>
    <string name="add_agi">Add agi</string>
    <string name="add_int">Add int</string>
    <string name="first_hero">First hero..</string>
    <string name="second_hero">Second hero..</string>
    <string name="third_hero">Third hero..</string>
    <string name="fourth_hero">Fourth hero..</string>
    <string name="fifth_hero">Fifth hero..</string>
    <string name="delete_button">delete_button</string>
    <string name="hero_icons">hero_icons</string>
    <string name="hero_images">hero_images</string>
    <string name="spell_icons">spell_icons</string>
    <string name="spell_ready">Spell ready</string>
    <string name="spell_indicators">spell_indicators</string>
    <string name="roshan">roshan</string>
    <string name="roshan_up">Roshan is up</string>
    <string name="aegis_down">Aegis is down</string>
    <string name="roshan_timer">Roshan timer</string>
    <string name="roshan_ind">roshan_ind</string>
    <string name="aegis">aegis</string>
    <string name="aegis_timer">Aegis timer</string>
    <string name="aegis_ind">aegis ind</string>
    <string name="neutral_items">neutral items</string>
    <string name="next_neutral_item">Next neutral item</string>
    <string name="neutral_items_ind">neutral items ind</string>
    <string name="_1_00">- 1:00</string>
    <string name="_0_40">-0:40</string>
    <string name="_0_20">-0:20</string>
    <string name="_10s">-10s</string>
    <string name="ult_lvl1">lvl1</string>
    <string name="ult_lvl2">lvl2</string>
    <string name="ult_lvl3">lvl3</string>
    <string name="misc_pics">misc pics</string>
    <string name="more">More</string>
    <string name="okay">Okay</string>
    <string name="retroactive">Retroactive</string>
    <string name="reset_cd">Reset CD</string>
    <string name="empty" />
    <string name="dropped">All dropped</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
</resources>