<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/cont_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/cont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_marginBottom="100dp"/>
    <Button
        android:id="@+id/str_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_str"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/agi_button"/>
    <Button
        android:id="@+id/agi_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_agi"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        app:layout_constraintStart_toEndOf="@+id/str_button"
        app:layout_constraintEnd_toStartOf="@id/int_button"/>
    <Button
        android:id="@+id/int_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_int"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        app:layout_constraintStart_toEndOf="@id/agi_button"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/topBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_your_heroes"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>